--- a/Moonlight-SpatialSDK/app/src/main/AndroidManifest.xml
+++ b/Moonlight-SpatialSDK/app/src/main/AndroidManifest.xml
@@ -53,7 +53,10 @@
   <uses-permission android:name="com.oculus.permission.RENDER_MODEL" />
   <!-- Volume Control -->
   <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-  <application android:allowBackup="false" android:label="Moonlight-SpatialSDK">
+  <application 
+      android:allowBackup="false" 
+      android:label="Moonlight-SpatialSDK"
+      android:networkSecurityConfig="@xml/network_security_config">
     <meta-data
       android:name="com.oculus.supportedDevices"
       android:value="quest2|questpro|quest3"
