panel placement and face direction have been addressed

--- a/Moonlight-SpatialSDK/.gitignore
+++ b/Moonlight-SpatialSDK/.gitignore
@@ -18,3 +18,7 @@ local.properties
 
 # Cursor IDE - local only
 .cursor
+
+# Log files - contain runtime data and should not be committed
+*.log
+logs/
