--- a/Moonlight-SpatialSDK/app/src/main/AndroidManifest.xml
+++ b/Moonlight-SpatialSDK/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
     android:name="oculus.software.overlay_keyboard"
     android:required="false"
   />
+  <uses-feature
+    android:name="android.hardware.gamepad"
+    android:required="false"
+  />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
